--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -22,7 +22,7 @@
   <body>
     <div class="wrapper">
       <header>
-      <a href="https://github.com/tech-sketch"><img style="position: absolute; top: 0; left: 0; border: 0;padding: 0px; margin: 0px" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+      <a href="https://github.com/tech-sketch/hyclops"><img style="position: absolute; top: 0; left: 0; border: 0;padding: 0px; margin: 0px" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
       <h1 class="header"><a href="{{ HOME_PATH }}"><img src="{{ site.production_url }}/assets/images/hyclops_official_logo.png" width=150 height=150 style=border:0px;margin:0px></a></h1>
         <p class="header">{{ site.tagline }}</p>
         <ul>
