--- a/_includes/themes/dinky/jp_default.html
+++ b/_includes/themes/dinky/jp_default.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/styles.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/pygment_trac.css">
+    <link rel="shortcut icon" href="assets/images/hyclops_icon.png">
     <script src="{{ ASSET_PATH }}/js/scale.fix.js"></script>
     <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/menu.js"></script>
